# ijkplayer

./: README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
ijkplayer-armv7a/src/main/jni/ffmpeg/include/libffmpeg/: config.h
ijkplayer-armv7a/src/main/jni/ijkmedia/ijkplayer/: ff_ffplay.c  ff_ffplay_def.h
ijkplayer-armv7a/src/main/jni/ijkmedia/ijkplayer/android/: ijkplayer_jni.c
ijkplayer-armv7a/src/main/jni/ijkmedia/ijkplayer/ijkavformat/: ijkasync.c
ijkplayer-armv7a/src/main/jni/ijkmedia/ijkplayer/ijkavutil/: ijkstl.cpp
ijkplayer-armv7a/src/main/jni/ijkmedia/ijksdl/android/: android_nativewindow.c  ijksdl_android_jni.c  ijksdl_android_jni.h
ijkplayer-example/: CMakeLists.txt  build.gradle
ijkplayer-example/src/main/java/tv/danmaku/ijk/media/example/widget/media/: IjkVideoView.java
